--- a/app/src/main/res/layout/fragment_animals_list.xml
+++ b/app/src/main/res/layout/fragment_animals_list.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.MainFragment"
+    tools:context=".ui.main.PetListFragment"
     android:padding="16dp">
 
     <Spinner
