--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.example.petfinderapp.ui.MainFragment"
+        android:name="com.example.petfinderapp.ui.main.PetListFragment"
         android:label="@string/fragment_animals_list_label"
         tools:layout="@layout/fragment_animals_list">
 
